2006-12-23  Akim Demaille  <demaille@gostai.com>

	Remove debugging output
	* utime.hh: here.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	List sys/stat.h in libport.mk
	* libport.mk (libport_HEADERS): Here.

2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Wrap sys/stat.h.
	* sys/stat.h: New.
	* sys: New.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	List cstdio in libport.mk.
	* libport.mk: Here.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Wrap cstdio.
	* cstdio: New. Address portability issues on VC++.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Fix fwd.hh
	* fwd.hh: Adjust namespaces.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	RefPt
	* ref-pt.hh: New.
	From k1/utypes.hh.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Fix compilation for Aibo
	* hash.hh: Cannot use quotes in #error.
	Move to the libport:: namespace.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	windows.h -> windows.hh
	* windows.h: Rename as...
	* windows.hh: this.
	* README, libport.mk, lockable.hh, semaphore.hh, thread.hh: .
	* utime.hh: Adjust.

2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't include system headers within the URBI namespace.
	* semaphore.hxx: Ahem...

2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Make semaphores more robust.
	* semaphore.hh: Return int values for windows' sem_*.
	* semaphore.hxx: Check return values of sem_*. Use named semaphores
          only on Darwin (otherwise use unammed semaphores).

2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a dummy implementation of sem_open for Windows.
	* semaphore.hh: Don't check for LIBPORT_WIN32 since libport/windows.h
          properly defines WIN32 when LIBPORT_WIN32 is defined. Define
          SEM_FAILED to be a NULL pointer if doesn't exist. Add a dummy
          implementation of sem_open for WIN32 that returns SEM_FAILED. Clean